--- a/test.html
+++ b/test.html
@@ -9,7 +9,8 @@
 </head>
 <body>
 <div>
-    <p id="tit1"><h1>Titolone grande in h1</h1></p>
+    <p><h1 id="tit1">Titolone grande in h1</h1></p>
+    <p><input type="email" placeholder="email address" id="EmailValue" required></p>
     <button id="button1" onclick="button1Click()">Bottone1</button>
 </div>
 
