test dom navigation

--- a/test.html
+++ b/test.html
@@ -9,9 +9,10 @@
 </head>
 <body>
 <div>
-    <p><h1 id="tit1">Titolone grande in h1</h1></p>
+    <p>Titolone grande</p>
     <p><input type="email" placeholder="email address" id="EmailValue" required></p>
     <button id="button1" onclick="button1Click()">Bottone1</button>
+    <button id="button2" onclick="button2Click()">Bottone2</button>
 </div>
 
     
