--- a/test.html
+++ b/test.html
@@ -4,15 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <script src="test.js"></script>
+    <script src="js/test.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="css/bootstrap.min.css">
     <title>Test Page</title>
 </head>
 <body>
 <div>
     <p>Titolone grande</p>
-    <p><input type="email" placeholder="email address" id="EmailValue" required></p>
-    <button id="button1" onclick="button1Click()">Bottone1</button>
-    <button id="button2" onclick="button2Click()">Bottone2</button>
+    <p><input type="email" placeholder="email address" class="" id="EmailValue" required></p>
+    <button id="button1" onclick="button1Click()" class="btn btn-dark">Bottone1</button>
+    <button id="button2" onclick="button2Click()" class="btn btn-dark">Bottone2</button>
+    <button id="button3" onclick="button3Click()" class="btn btn-dark">Bottone3</button>
+
 </div>
 
     
